--- a/contact.html
+++ b/contact.html
@@ -307,15 +307,63 @@
     <section class="contact-section">
         <div class="container">
             <div class="contact-inner">
-                <div class="row g-5 align-items-center">
+                <div class="row g-4">
+                    <div class="col-xl-5 col-lg-6">
+                        <div class="contact-area">
+                            <div class="section-header mb-0">
+                                <h3>Contact Information</h3>
+                            </div>
+                            <p class="para_text">Give us a call or drop by anytime, we endeavour to answer all enquiries
+                                within 24 hours on business days. We will be happy to answer your questions.</p>
+                            <div class="contact-item-list">
+                                <div class="item">
+                                    <div class="icon-area">
+                                        <i class="fa-light fa-phone"></i>
+                                    </div>
+                                    <div class="content-area">
+                                        <h6 class="mb-0">Phone:</h6>
+                                        <p class="mb-0">+45345847431324</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="icon-area">
+                                        <i class="fa-light fa-envelope"></i>
+                                    </div>
+                                    <div class="content-area">
+                                        <h6 class="mb-0">Email:</h6>
+                                        <p class="mb-0">demo@example.com</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="icon-area">
+                                        <i class="fa-light fa-location-dot"></i>
+                                    </div>
+                                    <div class="content-area">
+                                        <h6 class="mb-0">Address:</h6>
+                                        <p class="mb-0">22 Baker Street, London</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-30">
+                                <h5>Socials</h5>
+                                <ul class="social-box mt-10">
+                                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-xl-7 col-lg-6">
                         <div class="contact-message-area">
                             <div class="contact-header">
-                                <h3 class="section-title">let's talk</h3>
-                                <p class="cmn-para-text">
-                                    Have a question, feedback, or just want to say hello? We'd love to hear from you!
-                                    Reach out to us using the contact information below or fill out the form, and our
-                                    dedicated support team will get back to you as soon as possible.
+                                <h3 class="section-title">We’re always here for you</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia blanditiis
+                                    consequuntur rem, sit itaque impedit. Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Quam consequatur Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing elit. Sequi, perferendis?
+
                                 </p>
                             </div>
                             <form>
@@ -329,58 +377,19 @@
                                     <div class="mb-3 col-md-12">
                                         <input type="text" class="form-control" placeholder="Your Subject">
                                     </div>
-                                    <div class="mb-3 col-12">
-                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"
+                                    <div class="mb  -3 col-12">
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
                                             placeholder="Your Massage"></textarea>
                                     </div>
                                 </div>
-                                <div class="btn-area">
-                                    <button type="submit" class="cmn-btn mt-20">Send a massage</button>
+                                <div class="btn-area d-flex justify-content-end">
+                                    <button type="submit" class="cmn-btn w-100"><span>Send a massage</span></button>
                                 </div>
                             </form>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-lg-6">
-                        <div class="contact-area">
-                            <div class="thumbs-area">
-                                <img src="./assets/img/contact/email-marketing.png" alt="">
-                            </div>
-                            <div class="contact-list">
-                                <div class="item">
-                                    <div class="icon-area">
-                                        <i class="fa-regular fa-phone"></i>
-                                    </div>
-                                    <div class="content-area">
-                                        <h5 class="mb-0">Phone:</h5>
-                                        <p class="mb-0">+45345847431324</p>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="icon-area">
-                                        <i class="fa-regular fa-envelope"></i>
-                                    </div>
-                                    <div class="content-area">
-                                        <h5 class="mb-0">Email:</h5>
-                                        <p class="mb-0">demo@example.com</p>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="icon-area">
-                                        <i class="fa-regular fa-location-dot"></i>
-                                    </div>
-                                    <div class="content-area">
-                                        <h5 class="mb-0">Address:</h5>
-                                        <p class="mb-0">22 Baker Street, London</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
-
-
         </div>
     </section>
     <!-- Contact section end -->
