--- a/pricing-enterprise.html
+++ b/pricing-enterprise.html
@@ -303,20 +303,20 @@
                 </div>
             </div>
             <div class="page-tabs mt-50">
-                <div class="item active">
+                <a href="pricing.html" class="item">
                     <div class="img-box">
                         <img class="inactive-img" src="./assets/img/pricing-plan/tap_pricing_business.png" alt="">
                         <img class="active-img" src="./assets/img/pricing-plan/tap_pricing_business_active.png" alt="">
                     </div>
                     <div class="text-box">Business</div>
-                </div>
-                <a href="pricing-enterprise.html" class="item ">
+                </a>
+                <div class="item active">
                     <div class="img-box">
                         <img class="inactive-img" src="./assets/img/pricing-plan/tab_enterprise.png" alt="">
                         <img class="active-img" src="./assets/img/pricing-plan/tab_enterprise_active.png" alt="">
                     </div>
                     <div class="text-box">Enterprise</div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
