--- a/signup.html
+++ b/signup.html
@@ -311,7 +311,7 @@
                 <div class="row">
                     <div class="col-md-10 mx-auto">
                         <div class="row align-items-center">
-                            <div class="col-lg-6">
+                            <div class="col-lg-7">
                                 <div class="login-signup-form">
                                     <form>
                                         <div class="section-header">
@@ -320,33 +320,37 @@
                                                 account</div>
                                         </div>
                                         <div class="row g-4">
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
                                                 <input type="text" class="form-control" id="exampleInputEmail0"
                                                     placeholder="First Name">
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
                                                 <input type="text" class="form-control" id="exampleInputEmail2"
                                                     placeholder="Last Name">
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
                                                 <input type="text" class="form-control" id="exampleInputEmail3"
                                                     placeholder="User Name">
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
                                                 <input type="email" class="form-control" id="exampleInputEmail4"
                                                     placeholder="Email">
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
                                                 <input id="telephone" class="form-control" name="phone" type="tel">
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
                                                 <div class="password-box">
                                                     <input type="password" class="form-control password"
                                                         id="exampleInputPassword1" placeholder="Password">
                                                     <i class="password-icon fa-regular fa-eye"></i>
                                                 </div>
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-lg-6">
+                                                <input type="password" class="form-control password"
+                                                    id="exampleInputPassword2" placeholder="Confirm Password">
+                                            </div>
+                                            <div class="col-lg-6">
                                                 <input type="password" class="form-control password"
                                                     id="exampleInputPassword2" placeholder="Confirm Password">
                                             </div>
@@ -372,9 +376,9 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="col-lg-6 d-none d-lg-block">
+                            <div class="col-lg-5 d-none d-lg-block">
                                 <div class="login-signup-thums">
-                                    <img src="./assets/img/login-signup/Chat-pana.png" alt="">
+                                    <img src="./assets/img/login-signup/authentication-65.png" alt="">
                                 </div>
                             </div>
                         </div>
