--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <!-- Owl-carousel-Css-link -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-
     <!-- select2-Css-link -->
     <link rel="stylesheet" href="assets/css/select2.min.css">
     <!-- fancybox map css link -->
@@ -71,10 +70,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">contact</a>
                         </li>
-                        <li class="nav-item d-flex align-items-center">
+                        <li class="nav-item d-flex align-items-center justify-content-center">
                             <a class="get-start-btn" href="contact.html">demo</a>
                         </li>
-                        <li class="nav-item d-flex align-items-center">
+                        <li class="nav-item d-flex align-items-center justify-content-center">
                             <a class="login-btn" href="contact.html">free trial</a>
                         </li>
                     </ul>
