--- a/policy.html
+++ b/policy.html
@@ -69,10 +69,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">contact</a>
                         </li>
-                        <li class="nav-item d-flex align-items-center">
+                        <li class="nav-item d-flex align-items-center justify-content-center">
                             <a class="get-start-btn" href="contact.html">demo</a>
                         </li>
-                        <li class="nav-item d-flex align-items-center">
+                        <li class="nav-item d-flex align-items-center justify-content-center">
                             <a class="login-btn" href="contact.html">free trial</a>
                         </li>
                     </ul>
