--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <!-- select2-Css-link -->
     <link rel="stylesheet" href="assets/css/select2.min.css">
-    <!-- fancybox map css link -->
+    <!-- fancybox css link -->
+    <link rel="stylesheet" href="assets/css/fancybox.css">
+
 
 
 
@@ -1741,6 +1743,8 @@
     <script src="assets/js/select2.min.js"></script>
     <!-- cirlcle progress Js link -->
     <script src="assets/js/circle-progress.min.js"></script>
+    <!-- fancybox Js link -->
+    <script src="assets/js/fancybox.umd.js"></script>
 
 
     <!-- Main Js link -->
